Unmounting from sidebar doesn't prompt to delete trashed files from removable drive
We have a nice feature asking users whether to delete trashed files in removable devices before unmounting them.
However, currently the only way to trigger it is through the computer:///
place, because the "icons on desktop" feature is gone and the sidebar is private to GTK.
However, after we switch to GTK4, the sidebar is going to be under our control again, so we shall be able to use the nautilus_file_operations_unmount_mount_full()
code path when unmount action is triggered from sidebar.
Filling this issue in advance, currently blocking on the GTK4 port.