sidebar: Prompt to delete trashed files when unmounting

Call nautilus_file_operations_unmount_mount_full()
for unmount and eject operations from the sidebar.
Use the nautilus built in function checks if the
Trash needs to be emptied before ejecting / unmounting.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/2003